[2018-10-11 09:26:40 +0200]  Working on logging resources                                               karasu      {d6e49e38}